--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- added styling here to get rid of
+      extra whitespace on the right hand side of webpage -->
     <style>
       html, body {
         width: 100%;
